--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -18,6 +18,7 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </header>
+{% if is_granted('ROLE_USER') %}
 
 <!-- Fixed navbar -->
 <div class="navbar navbar-default navbar-fixed-top">
@@ -41,3 +42,4 @@
         </div><!--/.nav-collapse -->
     </div>
 </div>
+{% endif %}
