--- a/app/Resources/views/mission/missions-en-cours.html.twig
+++ b/app/Resources/views/mission/missions-en-cours.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Missions</h1>
+    <h1>Missions en cours</h1>
 
     <table>
         <thead>
