--- a/src/Grdf/FrontOfficeBundle/Resources/views/Profile/edit.html.twig
+++ b/src/Grdf/FrontOfficeBundle/Resources/views/Profile/edit.html.twig
@@ -14,8 +14,7 @@
                     {{ form_row(form.lastname) }}
                     {{ form_row(form.email) }}
                     {{ form_row(form.nni) }}
-                    {{ form_row(form.representantTerritorial) }}
-                    {{ form_row(form.managerAgence) }}
+                    {{ form_row(form.typeCompte) }}
                     {{ form_row(form.agence) }}
                     {{ form_row(form.plainPassword.first) }}
                     {{ form_row(form.plainPassword.second) }}
