--- a/src/Grdf/FrontOfficeBundle/Resources/views/Registration/register.html.twig
+++ b/src/Grdf/FrontOfficeBundle/Resources/views/Registration/register.html.twig
@@ -16,11 +16,11 @@
                     {{ form_row(form.lastname) }}
                     {{ form_row(form.email) }}
                     {{ form_row(form.nni) }}
-                    {{ form_row(form.representantTerritorial) }}
-                    {{ form_row(form.managerAgence) }}
+                    {{ form_row(form.roles, { attr: { 'label': 'Type de compte',  } }) }}
                     {{ form_row(form.agence) }}
                     {{ form_row(form.plainPassword.first) }}
                     {{ form_row(form.plainPassword.second) }}
+                    
                     <button type="submit" value="{{ 'registration.submit'|trans({}, 'FOSUserBundle') }}" class="btn btn-success"/>{{ 'register'|trans }}</button>
                     {{ form_end(form) }}
                 </div>
