Fonctionnalites OK - Front a faire

--- a/app/Resources/views/mission/index.html.twig
+++ b/app/Resources/views/mission/index.html.twig
@@ -37,10 +37,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('missions_show', { 'id': mission.id }) }}">show</a>
+                            <a href="{{ path('missions_show', { 'id': mission.id }) }}">Voir</a>
                         </li>
                         <li>
-                            <a href="{{ path('missions_edit', { 'id': mission.id }) }}">edit</a>
+                            <a href="{{ path('missions_edit', { 'id': mission.id }) }}">Editer</a>
                         </li>
                     </ul>
                 </td>
