--- a/app/Resources/views/mission/missions-en-attente.html.twig
+++ b/app/Resources/views/mission/missions-en-attente.html.twig
@@ -37,10 +37,10 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('missions_show', { 'id': mission.id }) }}">show</a>
+                            <a href="{{ path('missions_show', { 'id': mission.id }) }}">Voir</a>
                         </li>
                         <li>
-                            <a href="{{ path('missions_edit', { 'id': mission.id }) }}">edit</a>
+                            <a href="{{ path('missions_edit', { 'id': mission.id }) }}">Editer</a>
                         </li>
                     </ul>
                 </td>
@@ -51,7 +51,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('missions_new') }}">Create a new entry</a>
+            <a href="{{ path('missions_new') }}">Ajouter une mission</a>
         </li>
     </ul>
 {% endblock %}
