--- a/app/Resources/views/mission/new.html.twig
+++ b/app/Resources/views/mission/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Mission creation</h1>
+    <h1>Ajouter une mission</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -10,7 +10,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('missions_index') }}">Back to the list</a>
+            <a href="{{ path('missions_index') }}">Retour à la liste</a>
         </li>
     </ul>
 {% endblock %}
