--- a/app/Resources/views/mission/show.html.twig
+++ b/app/Resources/views/mission/show.html.twig
@@ -54,10 +54,10 @@
 
     <ul>
         <li>
-            <a href="{{ path('missions_index') }}">Back to the list</a>
+            <a href="{{ path('missions_index') }}">Retour à la liste</a>
         </li>
         <li>
-            <a href="{{ path('missions_edit', { 'id': mission.id }) }}">Edit</a>
+            <a href="{{ path('missions_edit', { 'id': mission.id }) }}">Editer</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
