--- a/app/Resources/views/user/show.html.twig
+++ b/app/Resources/views/user/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>User</h1>
+    <h1>Utilisateur</h1>
 
     <table>
         <tbody>
@@ -14,10 +14,10 @@
 
     <ul>
         <li>
-            <a href="{{ path('admin_users_index') }}">Back to the list</a>
+            <a href="{{ path('admin_users_index') }}">Retour à la liste</a>
         </li>
         <li>
-            <a href="{{ path('admin_users_edit', { 'id': user.id }) }}">Edit</a>
+            <a href="{{ path('admin_users_edit', { 'id': user.id }) }}">Editer</a>
         </li>
         <li>
             {{ form_start(delete_form) }}
